# Bedrock-Practitest-MCP

./: practitest.py  pyproject.toml  weather.py
mcp-client/: client.py  pyproject.toml
