[project]
name = "practitest"
version = "0.1.0"
description = "A simple MCP practitest server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.2.0",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["mcp-client"]

[project.scripts]
practitest = "practitest:main"
